# voxtral_finetune

./: .gitignore  README.md  pyproject.toml
config/: voxtral-3B-v0.yaml
slurm_scripts/: train.sh  transcribe.sh
splits/hyphen_rules/: hyphenated_words_to_normalize.json
splits/medical_split_20251113/: test.csv  train.csv  valid.csv  valid_debug.csv
splits/uka_all_20260121/: samples_cutoff_audio_thresh1.csv  test.csv  valid.csv
splits/uka_all_20260127/: hyphenated_words_to_normalize.json
src/voxtral_finetune/: augmentations.py  collator.py  dataset.py  dataset_utils.py  find_hyphenated_words.py  get_metrics.py  main.py  normalizer.py  train.py  transcribe.py  utils.py
src/voxtral_finetune/test/: load_dataset.py  test_dataset_datacollator.py  test_metrics.py
src/voxtral_finetune/wer/: wer.py
